crates/reinhardt-core/macros/tests/ui/path/fail/parameter_starts_with_number.stderr
error: Invalid parameter syntax at position 6. Perhaps you meant to close a previous parameter?
 --> tests/ui/path/fail/parameter_starts_with_number.rs:6:22
  |
6 |     let pattern = path!("polls/{1id}/");
  |                         ^^^^^^^^^^^^^^
